--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,4 @@
 <h1>{{ app_name }}</h1>
-
-<h4>Name: </h4>
-<p>{{ name }}<p>
-<h4>Class: </h4>
-<p>{{ class }}</p>
+    <p><strong>Name:</strong> {{ name }}</p>
+    <p><strong>NPM:</strong> {{ npm }}</p>
+    <p><strong>Class:</strong> {{ class }}</p>
