--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,4 +1,58 @@
+{% extends 'base.html' %}
+{% block content %}
 <h1>{{ app_name }}</h1>
-    <p><strong>Name:</strong> {{ name }}</p>
-    <p><strong>NPM:</strong> {{ npm }}</p>
-    <p><strong>Class:</strong> {{ class }}</p>
+    <p><b>Name:</b> {{ name }}</p>
+    <p><b>NPM:</b> {{ npm }}</p>
+    <p><b>Class:</b> {{ class }}</p>
+
+<a href="{% url 'main:add_product' %}">
+    <button>+ Add Product</button>
+</a>
+
+<hr>
+
+{% if not product_list %}
+<p>Belum ada produk di toko ini.</p>
+{% else %}
+
+{% for product in product_list %}
+<div>
+    <h2><a href="{% url 'main:show_product' product.id %}">{{ product }}</a></h2>
+
+    <p>{% if product.is_featured %}<b>Featured</b>{% endif %}</p>
+
+    {% if product.thumbnail %}
+    <img src="{{ product.thumbnail }}" alt="thumbnail" width="150" height="150" style="border-radius: 8px; object-fit: cover">
+    <br />
+    {% endif %}
+
+    <h3><b>Rp {{ product.price }}</b></h3>
+    <p>
+        <b>{{ product.get_category_display }}</b> 
+        | Brand: {{ product.brand }}
+        
+        {% if product.size %}
+            | Size: {{ product.size }}
+        {% endif %}
+        
+        {% if product.color %}
+            | Color: {{ product.color }}
+        {% endif %}
+        
+        {% if product.stock > 0 %}
+            | Stock: {{ product.stock }}
+        {% else %}
+            <strong>| Out of Stock</strong>
+        {% endif %}
+    </p>
+
+    <p><a href="{% url 'main:show_product' product.id %}">
+        <button>View Details</button>
+    </a></p>
+</div>
+
+<hr>
+{% endfor %}
+
+{% endif %}
+{% endblock content %}
