--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -29,4 +29,10 @@
 
 <p>{{ product.description }}</p>
 
+{% if product.user %}
+    <p>Seller: {{ product.user.username }}</p>
+{% else %}
+    <p>Seller: Anonymous</p>
+{% endif %}
+
 {% endblock content %}
