--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -13,15 +13,15 @@
     <button>Logout</button>
 </a>
 
-<h5>Sesi terakhir login: {{ last_login }}</h5>
+<p>User: <b>{{ user.username }}</b> (sesi terakhir login: {{ last_login }})</p>
 
 <hr>
 
 <a href="?filter=all">
-    <button type="button">All Articles</button>
+    <button type="button">All Products</button>
 </a>
 <a href="?filter=my">
-    <button type="button">My Articles</button>
+    <button type="button">My Products</button>
 </a>
 
 {% if not product_list %}
